syntax = "proto3";

package reddit;

enum SubredditVisibility {
  PUBLIC = 0;
  PRIVATE = 1;
  HIDDEN = 2;
}

message Subreddit {
  int32 subRedditId = 1;
  string name = 2;
  SubredditVisibility visibility = 3;
  repeated string tags = 4;
}
